# colloscope

./: .pre-commit-config.yaml  main.py  pyproject.toml
colloscope/: __init__.py  io.py
tests/: test_io.py
tests/data/: calendar.csv  group_calendar_exclusion.csv  students.csv  teachers.csv
