[tool.poetry]
name = "colloscope"
version = "0.1.0"
description = ""
authors = ["Ivan <iv.panico@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ortools = "^9.10.4067"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
ipykernel = "^6.29.5"
pytest = "^8.3.3"


[tool.isort]
profile = "black"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
